syntax = "proto3";

package scoring;

service ScoringService {
  rpc Score(ScoreRequest) returns (ScoreResponse);
}

message ScoreRequest {
  uint32 age = 1;
  double income = 2;
  uint32 credit_history_months = 3;
  uint32 late_payments = 4;
  double total_debt = 5;
  repeated double last_transactions = 6;
  uint32 account_age_months = 7;
  repeated uint32 last_6_month_late_payments = 8;
}

message ScoreResponse {
  uint32 score = 1;
  Decision decision = 2;
  repeated string reasons = 3;
}

enum Decision {
  APPROVE = 0;
  REVIEW = 1;
  REJECT = 2;
}
